# ESP32SupervisionDeRuches

./: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c
main/dhtxx/: dht.c  dht.h
main/hive/: hive.c  hive.h
